--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <application
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.DarkKat.DayNight" >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
@@ -24,7 +24,7 @@
             android:label="@string/settings_title"/>
 
         <activity
-            android:name="net.darkkatrom.dkcolorpicker.ColorPickerActivity"
+            android:name="net.darkkatrom.dkcolorpicker.activity.ColorPickerDKThemedActivity"
             android:label="@string/pick_color_title" />
 
 <!--
